--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for fca-backend on 2025-08-05T23:08:17-05:00
+# fly.toml app configuration file generated for fca-api on 2025-08-06T04:33:50Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'fca-backend'
-primary_region = 'sea'
+app = 'fca-api'
+primary_region = 'gru'
 
 [build]
 
@@ -20,3 +20,4 @@ primary_region = 'sea'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
